erDiagram

    %% ============================
    %% CENTRAL ADMIN MODULE
    %% ============================
    Central_Admin {
        int admin_id PK
        string name
        string email
    }

    Central_Notifications {
        int notification_id PK
        string message
        date date_sent
    }

    Central_Reports {
        int report_id PK
        string module
        string report_type
    }

    Central_Admin ||--o{ Central_Notifications : "sends"
    Central_Admin ||--o{ Central_Reports : "creates"


    %% ============================
    %% CITIZEN MODULE
    %% ============================
    Citizen {
        int citizen_id PK
        string name
        int age
        string gender
        string address
        string contact_no
        string email
    }

    Citizen_Complaints {
        int complaint_id PK
        string description
        string status
    }

    Citizen_Feedback {
        int feedback_id PK
        string message
    }

    Citizen ||--o{ Citizen_Complaints : "submits"
    Citizen ||--o{ Citizen_Feedback : "gives"


    %% ============================
    %% TRAFFIC MANAGEMENT
    %% ============================
    Traffic_Admin {
        int admin_id PK
        string name
    }

    Traffic_Vehicles {
        int vehicle_id PK
        string registration_no
        string type
    }

    Traffic_Violations {
        int violation_id PK
        string type
        float fine_amount
    }

    Traffic_Fines {
        int fine_id PK
        float amount
        string payment_status
    }

    Central_Admin ||--o{ Traffic_Admin : "manages"
    Traffic_Admin ||--o{ Traffic_Vehicles : "oversees"
    Citizen ||--o{ Traffic_Vehicles : "owns"
    Traffic_Vehicles ||--o{ Traffic_Violations : "has"
    Traffic_Violations ||--o{ Traffic_Fines : "generates"


    %% ============================
    %% ENERGY MANAGEMENT
    %% ============================
    Energy_Admin {
        int admin_id PK
        string name
    }

    Energy_Account {
        int account_id PK
        string meter_no
        string connection_type
    }

    Energy_Usage {
        int usage_id PK
        int units
        string month
    }

    Energy_Bill {
        int bill_id PK
        float amount
        string payment_status
    }

    Central_Admin ||--o{ Energy_Admin : "manages"
    Energy_Admin ||--o{ Energy_Account : "oversees"
    Citizen ||--o{ Energy_Account : "owns"
    Energy_Account ||--o{ Energy_Usage : "records"
    Energy_Usage ||--o{ Energy_Bill : "generates"


    %% ============================
    %% HOSPITAL MANAGEMENT
    %% ============================
    Hospital_Admin {
        int admin_id PK
        string name
    }

    Hospitals {
        int hospital_id PK
        string name
        string location
        int capacity
    }

    Doctors {
        int doctor_id PK
        string name
        string specialization
    }

    Patients {
        int patient_id PK
        string disease
        string status
    }

    Central_Admin ||--o{ Hospital_Admin : "manages"
    Hospitals ||--o{ Doctors : "employs"
    Doctors ||--o{ Patients : "treats"
    Citizen ||--o{ Patients : "is"
    Hospital_Admin ||--o{ Patients : "oversees"


    %% ==========================================
    %% SMART HOUSING & INFRASTRUCTURE
    %% ==========================================
    Smart_Housing_Admin {
        int admin_id PK
        string name
    }

    Housing_Units {
        int unit_id PK
        string address
        string unit_type
        int size_sqft
    }

    Maintenance_Requests {
        int request_id PK
        string issue_description
        date request_date
        string status
    }

    Infrastructure_Projects {
        int project_id PK
        string project_name
        string project_type
        date start_date
        date end_date
    }

    Central_Admin ||--o{ Smart_Housing_Admin : "manages"
    Smart_Housing_Admin ||--o{ Housing_Units : "oversees"
    Citizen ||--o{ Housing_Units : "owns"
    Housing_Units ||--o{ Maintenance_Requests : "requests"
    Smart_Housing_Admin ||--o{ Infrastructure_Projects : "manages"
